--- a/css/style.css
+++ b/css/style.css
@@ -196,3 +196,26 @@ h1, h2, h3 {
     display: flex;
     justify-content: space-around;
 }
+
+/* order-modal */
+.order-modal{
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  z-index: 200;
+  width: 350px;
+  padding: 20px;
+  display: none;
+  background: #d3d3d3;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 26px 32px 0 rgba(0,0,50,.06);
+}
+.order-modal.show{
+  display: block;
+}
+.order-modal__field{
+  width: 100%;
+  height: 30px;
+  padding-left: 5px;
+  margin-bottom: 10px;
+}
